--- a/local.yml
+++ b/local.yml
@@ -14,10 +14,7 @@
       - install
       - core
   tasks:
-    - include: tasks/ssh.yml
-    - include: tasks/git-setup.yml
-    - include: tasks/core-setup.yml
-    - include: tasks/node-setup.yml
     - include: tasks/zsh-setup.yml
+    - include: tasks/starship-setup.yml
     - include: tasks/nvim-setup.yml
     - include: tasks/dotfiles.yml
