--- a/local.yml
+++ b/local.yml
@@ -14,6 +14,7 @@
       - install
       - core
   tasks:
+    - include: tasks/core-setup.yml
     - include: tasks/zsh-setup.yml
     - include: tasks/starship-setup.yml
     - include: tasks/nvim-setup.yml
