--- a/tasks/nvim-setup.yml
+++ b/tasks/nvim-setup.yml
@@ -1,5 +1,8 @@
 - name: Remove neovim
-  shell: rm -rf ~/neovim
+  become: true
+  file:
+    state: absent
+    path: ~/neovim
   tags:
     - install
     - neovim
