Add new task for tools I like

--- a/local.yml
+++ b/local.yml
@@ -19,3 +19,4 @@
     - include: tasks/starship-setup.yml
     - include: tasks/nvim-setup.yml
     - include: tasks/dotfiles.yml
+    - include: tasks/productivity-tools.yml
