--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -19,7 +19,7 @@
 - name: Install System Packages 3 (the rest)
   become: true
   apt:
-    name: ["curl", "htop", "lsof", "i3", "ccache", "python3-pip", "dconf-editor" ]
+    name: ["curl", "htop", "lsof", "ccache", "python3-pip" ]
   tags:
     - install
     - core
