Adding task to setup git

--- a/local.yml
+++ b/local.yml
@@ -14,6 +14,7 @@
       - core
   tasks:
     - include: tasks/ssh.yml
+    - include: tasks/git-setup.yml
     - include: tasks/core-setup.yml
     - include: tasks/zsh-setup.yml
     # - include: tasks/cargo.yml
