--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -25,10 +25,13 @@
     - dotfiles
     - install
     - ssh
+
 - name: Set authorized key took from file
   authorized_key:
     user: "{{ lookup('env', 'USER') }}"
     state: present
-    key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa.pub"
+    key: "{{ lookup('file', item) }}"
   with_fileglob:
   - "{{ lookup('env', 'HOME') }}/.ssh/*.pub"
+  tags:
+    - ssh
