--- a/tasks/productivity-tools.yml
+++ b/tasks/productivity-tools.yml
@@ -6,6 +6,15 @@
     - install
     - productivity
 
+- name: Create .local/bin
+  ansible.builtin.file:
+    path: ~/.local/bin
+    state: directory
+    mode: '0755'
+  tags:
+    - install
+    - productivity
+
 - name: Get exa latest tag
   github_release:
     user: ogham
@@ -34,11 +43,11 @@
     - install
     - productivity
 
-- name: Create .local/bin
-  ansible.builtin.file:
-    path: ~/.local/bin
-    state: directory
-    mode: '0755'
+- name: Grab exa latest binaries
+  unarchive:
+    src: "https://github.com/ogham/exa/releases/download/{{ exa_latest['tag'] }}/exa-linux-x86_64-{{ exa_latest['tag']}}.zip"
+    dest: /tmp/exa
+    remote_src: true
   tags:
     - install
     - productivity
@@ -48,6 +57,50 @@
     src: /tmp/exa/bin/exa
     dest: ~/.local/bin/exa
     mode: a+x
+  tags:
+    - install
+    - productivity
+
+- name: Get lazygit latest tag
+  github_release:
+    user: jesseduffield
+    repo: lazygit
+    action: latest_release
+  register: lazygit_latest
+  tags:
+    - git
+    - install
+    - productivity
+
+- name: Create lazygit directory
+  ansible.builtin.file:
+    path: /tmp/lg
+    state: directory
+    mode: '0755'
+  tags:
+    - git
+    - install
+    - productivity
+
+- name: Grab lazygit latest binaries
+  unarchive:
+    src: "https://github.com/jesseduffield/lazygit/releases/download/{{ lazygit_latest['tag'] }}/lazygit_{{ lazygit_latest['tag'] | regex_replace('^v','') }}_Linux_x86_64.tar.gz"
+    dest: /tmp/lg
+    remote_src: true
+  tags:
+    - git
+    - install
+    - productivity
+
+- name: Install lazygit 
+  ansible.builtin.copy:
+    src: /tmp/lg/lazygit
+    dest: ~/.local/bin/lazygit
+    mode: a+x
+  tags:
+    - git
+    - install
+    - productivity
 
 - name: Rename batcat and fdfind 
   ansible.builtin.file:
