--- a/tasks/nvim-setup.yml
+++ b/tasks/nvim-setup.yml
@@ -1,11 +1,11 @@
 - name: Remove neovim
-  become: true
   file:
     state: absent
-    path: ~/neovim
+    path: ~/.local/bin/nvim.appimage
   tags:
     - install
     - neovim
+
 - name: Get Packer
   ansible.builtin.git:
     repo: 'https://github.com/wbthomason/packer.nvim'
@@ -13,30 +13,33 @@
   tags:
     - install
     - neovim
-- name: Clone Neovim
-  ansible.builtin.git:
-    repo: 'https://github.com/neovim/neovim.git'
-    dest: "{{ lookup('env', 'HOME') }}/neovim"
+
+- name: Get nvim latest tag
+  github_release:
+    user: neovim
+    repo: neovim
+    action: latest_release
+  register: nvim_latest
   tags:
     - install
     - neovim
-- name: Build neovim
-  shell: "cd {{ lookup('env', 'HOME') }}/neovim && make -j 20"
+
+- name: Grab nvim latest appimage
+  ansible.builtin.get_url:
+    url: "https://github.com/neovim/neovim/releases/download/{{ nvim_latest['tag'] }}/nvim.appimage"
+    dest: ~/.local/bin/
+    mode: a+x
   tags:
     - install
     - neovim
-- name: Install neovim
-  become: true
-  shell: "cd {{ lookup('env', 'HOME') }}/neovim && make install"
-  tags:
-    - install
-    - neovim
+
 - name: Neovim Plugin Development 1
   become: true
   apt: name=luarocks
   tags:
     - install
     - neovim
+
 - name: Neovim Plugin Development 2 luacheck
   become: true
   shell: luarocks install luacheck
