Add tmux plugin manager

--- a/tasks/productivity-tools.yml
+++ b/tasks/productivity-tools.yml
@@ -113,3 +113,10 @@
   tags:
    - install
    - productivity
+
+- name: Install tmux plugin manager
+  ansible.builtin.git:
+    repo: 'https://github.com/tmux-plugins/tpm'
+    dest: "~/.tmux/plugins/tpm"
+  tags:
+    - productivity
