--- a/tasks/zsh-setup.yml
+++ b/tasks/zsh-setup.yml
@@ -25,3 +25,15 @@
     repo: 'https://github.com/zsh-users/zsh-autosuggestions.git'
     dest: "~/.oh-my-zsh/plugins/zsh-autosuggestions"
   tags: *tags_for_zsh_tasks
+
+- name: Install fzf-tab
+  ansible.builtin.git:
+    repo: 'https://github.com/Aloxaf/fzf-tab'
+    dest: "~/.oh-my-zsh/custom/plugins/fzf-tab"
+  tags: *tags_for_zsh_tasks
+
+- name: Install zsh-syntax-highlighting
+  ansible.builtin.git:
+    repo: 'git clone https://github.com/zsh-users/zsh-syntax-highlighting.git'
+    dest: "~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting"
+  tags: *tags_for_zsh_tasks
