--- a/tasks/zsh-setup.yml
+++ b/tasks/zsh-setup.yml
@@ -34,6 +34,6 @@
 
 - name: Install zsh-syntax-highlighting
   ansible.builtin.git:
-    repo: 'git clone https://github.com/zsh-users/zsh-syntax-highlighting.git'
+    repo: 'https://github.com/zsh-users/zsh-syntax-highlighting.git'
     dest: "~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting"
   tags: *tags_for_zsh_tasks
