Install fzf from github to always use the latest

--- a/local.yml
+++ b/local.yml
@@ -22,3 +22,4 @@
     - include: tasks/nvim-setup.yml
     - include: tasks/dotfiles.yml
     - include: tasks/productivity-tools.yml
+    - include: tasks/fzf.yml
