--- a/local.yml
+++ b/local.yml
@@ -13,13 +13,13 @@
       - install
       - core
   tasks:
-    - include: tasks/ssh.yml
-    - include: tasks/git-setup.yml
-    - include: tasks/core-setup.yml
-    - include: tasks/zsh-setup.yml
+    - import_tasks: tasks/ssh.yml
+    - import_tasks: tasks/git-setup.yml
+    - import_tasks: tasks/core-setup.yml
+    - import_tasks: tasks/zsh-setup.yml
     # - include: tasks/cargo.yml
-    - include: tasks/starship-setup.yml
-    - include: tasks/nvim-setup.yml
-    - include: tasks/dotfiles.yml
-    - include: tasks/productivity-tools.yml
-    - include: tasks/fzf.yml
+    - import_tasks: tasks/starship-setup.yml
+    - import_tasks: tasks/nvim-setup.yml
+    - import_tasks: tasks/dotfiles.yml
+    - import_tasks: tasks/productivity-tools.yml
+    - import_tasks: tasks/fzf.yml
